Added npm test, grunt, travis and appveyor support based on ioBroker.template

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adapter for ioBroker that communicates with a Loxone Miniserver",
   "main": "loxone.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -36,5 +36,14 @@
   "dependencies": {
     "node-lox-ws-api": "^0.2.8",
     "sprintf-js": "^1.0.3"
+  },
+  "devDependencies": {
+      "grunt": "^0.4.5",
+      "grunt-replace": "^0.9.3",
+      "grunt-contrib-jshint": "^0.11.2",
+      "grunt-jscs": "^2.0.0",
+      "grunt-http": "^1.6.0",
+      "mocha": "^2.3.4",
+      "chai": "^3.4.1"
   }
 }
