--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
     "node": ">=1.0"
   },
   "dependencies": {
+    "extend": "^3.0.1",
     "node-lox-ws-api": "^0.3.3",
     "sprintf-js": "^1.1.0"
   },
   "devDependencies": {
-      "grunt": "^0.4.5",
-      "grunt-replace": "^0.9.3",
-      "grunt-contrib-jshint": "^0.11.2",
-      "grunt-jscs": "^2.0.0",
-      "grunt-http": "^1.6.0",
-      "mocha": "^2.3.4",
-      "chai": "^3.4.1"
+    "grunt": "^0.4.5",
+    "grunt-replace": "^0.9.3",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-jscs": "^2.0.0",
+    "grunt-http": "^1.6.0",
+    "mocha": "^2.3.4",
+    "chai": "^3.4.1"
   }
 }
