--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node": ">=1.0"
   },
   "dependencies": {
+    "color-convert": "^1.9.0",
     "extend": "^3.0.1",
     "node-lox-ws-api": "^0.3.3",
     "sprintf-js": "^1.1.0"
