--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adapter for ioBroker that communicates with a Loxone Miniserver",
   "main": "loxone.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha"
+    "test": "node node_modules/mocha/bin/mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -48,7 +48,7 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-jscs": "^3.0.1",
     "grunt-http": "^2.2.0",
-    "mocha": "^3.5.3",
+    "mocha": "^4.1.0",
     "chai": "^4.1.2"
   }
 }
