--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "grunt-jscs": "^3.0.1",
     "grunt-http": "^2.2.0",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "@iobroker/adapter-core": "^1.0.3"
   }
 }
