Completely recreated the adapter source with npx @iobroker/create-adapter All functionality is currently missing (no code in src/main and index_m.html)

--- a/package.json
+++ b/package.json
@@ -1,55 +1,75 @@
 {
   "name": "iobroker.loxone",
-  "version": "1.1.0",
-  "description": "Adapter for ioBroker that communicates with a Loxone Miniserver",
-  "main": "loxone.js",
-  "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --exit"
+  "version": "0.0.1",
+  "description": "Communicates with a Loxone Miniserver.",
+  "author": {
+    "name": "UncleSamSwiss",
+    "email": "samuel.weibel@gmail.com"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/UncleSamSwiss/ioBroker.loxone.git"
-  },
+  "homepage": "https://github.com/UncleSamSwiss/ioBroker.loxone",
+  "license": "Apache-2.0",
   "keywords": [
     "ioBroker",
     "loxone",
     "miniserver",
     "home automation",
-    "smart home"
+    "smarthome"
   ],
-  "author": {
-    "name": "UncleSamSwiss",
-    "email": "samuel.weibel@gmail.com"
-  },
-  "contributors": [
-    {
-      "name": "UncleSamSwiss",
-      "email": "samuel.weibel@gmail.com"
-    }
-  ],
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/UncleSamSwiss/ioBroker.loxone/issues"
-  },
-  "homepage": "https://github.com/UncleSamSwiss/ioBroker.loxone",
-  "readme": "https://github.com/UncleSamSwiss/ioBroker.loxone/blob/master/README.md",
-  "engines": {
-    "node": ">=1.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/UncleSamSwiss/ioBroker.loxone"
   },
   "dependencies": {
     "color-convert": "^2.0.1",
-    "extend": "^3.0.2",
     "node-lox-ws-api": "^0.4.5",
     "sprintf-js": "^1.1.2",
     "@iobroker/adapter-core": "^2.4.0"
   },
   "devDependencies": {
-    "grunt": "^1.2.1",
-    "grunt-replace": "^1.0.1",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-jscs": "^3.0.1",
-    "grunt-http": "^2.3.3",
+    "@iobroker/testing": "^2.2.0",
+    "@types/chai": "^4.2.12",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/gulp": "^4.0.6",
+    "@types/mocha": "^8.0.1",
+    "@types/node": "^14.0.27",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^9.0.4",
+    "@types/sinon-chai": "^3.2.4",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "axios": "^0.19.2",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "gulp": "^4.0.2",
     "mocha": "^8.1.1",
-    "chai": "^4.2.0"
-  }
+    "prettier": "^2.0.5",
+    "proxyquire": "^2.1.3",
+    "rimraf": "^3.0.2",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
+  },
+  "main": "build/main.js",
+  "scripts": {
+    "prebuild": "rimraf ./build",
+    "build:ts": "tsc -p tsconfig.build.json",
+    "build": "npm run build:ts",
+    "watch:ts": "tsc -p tsconfig.build.json --watch",
+    "watch": "npm run watch:ts",
+    "test:ts": "mocha --opts test/mocha.custom.opts",
+    "test:package": "mocha test/package --exit",
+    "test:unit": "mocha test/unit --exit",
+    "test:integration": "mocha test/integration --exit",
+    "test": "npm run test:ts && npm run test:package",
+    "lint": "eslint --ext .ts src"
+  },
+  "bugs": {
+    "url": "https://github.com/UncleSamSwiss/ioBroker.loxone/issues"
+  },
+  "readmeFilename": "README.md"
 }
