--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,13 @@ os:
   - linux
   - osx
   - windows
+
 language: node_js
 node_js:
   - '10'
   - '12'
   - '14'
-before_script:
-  - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
-  - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm@5; fi'
-  - npm -v
-  - npm install winston@3.2.1
-  - 'npm install https://github.com/ioBroker/ioBroker.js-controller/tarball/master --production'
+
 env:
   - CXX=g++-6
 addons:
@@ -21,3 +17,16 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-6
+
+before_install:
+  - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then CC=gcc-6; fi'
+  - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CC=g++-6; fi'
+before_script:
+  - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
+  - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm; fi'
+  - npm -v
+script:
+  - npm run test:package
+  - npm run test:unit
+  - export DEBUG=testing:*
+  - npm run test:integration
