--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,7 +5,8 @@
         "allowJs": false,
         "checkJs": false,
         "noEmit": false,
-        "declaration": false
+        "declaration": false,
+        "sourceMap": true
     },
     "include": ["src/**/*.ts"],
     "exclude": ["src/**/*.test.ts"]
