--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@iobroker/testing": "^2.2.0",
     "@types/chai": "^4.2.12",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/color-convert": "^1.9.0",
     "@types/gulp": "^4.0.6",
     "@types/mocha": "^8.0.1",
     "@types/node": "^14.0.27",
