--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^9.0.4",
     "@types/sinon-chai": "^3.2.4",
+    "@types/sprintf-js": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "axios": "^0.19.2",
