The variable github.event.base_ref is no longer filled, let's check if we find the branch name somewhere

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -24,6 +24,7 @@ jobs:
                   echo "github.ref=${{ github.ref }}"
                   echo "github.event.base_ref=${{ github.event.base_ref }}"
                   echo "github.event.head_commit.message=${{ github.event.head_commit.message }}"
+                  cat "${{ github.event_path }}"
 
     # Performs quick checks before the expensive test runs
     check-and-lint:
