--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -116,7 +116,7 @@ jobs:
               run: npm ci
 
             - name: Create a clean build
-              run: npx gulp build
+              run: npm run build
 
             - name: Publish package to npm
               run: |
