#61 Replaced queue with cache. Not ideal until we can 'await' on handleEvent.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "color-convert": "^2.0.1",
     "node-lox-ws-api": "^0.4.5",
     "sprintf-js": "^1.1.2",
-    "@iobroker/adapter-core": "^2.4.0"
+    "@iobroker/adapter-core": "^2.4.0",
+    "queue-fifo": "*"
   },
   "devDependencies": {
     "@iobroker/testing": "^2.3.0",
