--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -5,12 +5,12 @@ name: Test and Release
 on:
     push:
         branches:
-            - '*'
+            - "*"
         tags:
             # normal versions
-            - 'v[0-9]+.[0-9]+.[0-9]+'
+            - "v[0-9]+.[0-9]+.[0-9]+"
             # pre-releases
-            - 'v[0-9]+.[0-9]+.[0-9]+-**'
+            - "v[0-9]+.[0-9]+.[0-9]+-**"
     pull_request: {}
 
 jobs:
@@ -35,7 +35,10 @@ jobs:
 
             - name: Install Dependencies
               run: npm ci
-
+            - name: Perform a type check
+              run: npm run build:ts -- --noEmit
+              env:
+                  CI: true
             - name: Lint source code
               run: npm run lint
             - name: Test package files
@@ -76,71 +79,66 @@ jobs:
               if: startsWith(runner.OS, 'windows')
               run: set DEBUG=testing:* & npm run test:integration
 
-    # Deploys the final package to NPM
-    deploy:
-        needs: [adapter-tests]
+# TODO: To enable automatic npm releases, create a token on npmjs.org 
+# Enter this token as a GitHub secret (with name NPM_TOKEN) in the repository options
+# Then uncomment the following block:
 
-        # Trigger this step only when a commit on master is tagged with a version number
-        if: |
-            contains(github.event.head_commit.message, '[skip ci]') == false &&
-            github.event_name == 'push' &&
-            startsWith(github.ref, 'refs/tags/v')
-
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                node-version: [14.x]
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
-
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
-              with:
-                  node-version: ${{ matrix.node-version }}
-
-            - name: Extract the version and commit body from the tag
-              id: extract_release
-              # The body may be multiline, therefore newlines and % need to be escaped
-              run: |
-                  VERSION="${{ github.ref }}"
-                  VERSION=${VERSION##*/v}
-                  echo "::set-output name=VERSION::$VERSION"
-                  BODY=$(git show -s --format=%b)
-                  BODY="${BODY//'%'/'%25'}"
-                  BODY="${BODY//$'\n'/'%0A'}"
-                  BODY="${BODY//$'\r'/'%0D'}"
-                  echo "::set-output name=BODY::$BODY"
-
-            - name: Install dependencies
-              run: npm ci
-
-            - name: Create a clean build
-              run: npm run build
-
-            - name: Publish package to npm
-              run: |
-                  npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-                  npm whoami
-                  npm publish
-
-            - name: Create Github Release
-              uses: actions/create-release@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  tag_name: ${{ github.ref }}
-                  release_name: Release v${{ steps.extract_release.outputs.VERSION }}
-                  draft: false
-                  # Prerelease versions create prereleases on Github
-                  prerelease: ${{ contains(steps.extract_release.outputs.VERSION, '-') }}
-                  body: ${{ steps.extract_release.outputs.BODY }}
-
-    # Dummy job for skipped builds - without this, github reports the build as failed
-    skip-ci:
-        if: contains(github.event.head_commit.message, '[skip ci]')
-        runs-on: ubuntu-latest
-        steps:
-            - name: Skip build
-              run: echo "Build skipped!"
+#    # Deploys the final package to NPM
+#    deploy:
+#        needs: [adapter-tests]
+#
+#        # Trigger this step only when a commit on any branch is tagged with a version number
+#        if: |
+#            contains(github.event.head_commit.message, '[skip ci]') == false &&
+#            github.event_name == 'push' &&
+#            startsWith(github.ref, 'refs/tags/v')
+#
+#        runs-on: ubuntu-latest
+#        strategy:
+#            matrix:
+#                node-version: [14.x]
+#
+#        steps:
+#            - name: Checkout code
+#              uses: actions/checkout@v2
+#
+#            - name: Use Node.js ${{ matrix.node-version }}
+#              uses: actions/setup-node@v1
+#              with:
+#                  node-version: ${{ matrix.node-version }}
+#
+#            - name: Extract the version and commit body from the tag
+#              id: extract_release
+#              # The body may be multiline, therefore newlines and % need to be escaped
+#              run: |
+#                  VERSION="${{ github.ref }}"
+#                  VERSION=${VERSION##*/v}
+#                  echo "::set-output name=VERSION::$VERSION"
+#                  BODY=$(git show -s --format=%b)
+#                  BODY="${BODY//'%'/'%25'}"
+#                  BODY="${BODY//$'\n'/'%0A'}"
+#                  BODY="${BODY//$'\r'/'%0D'}"
+#                  echo "::set-output name=BODY::$BODY"
+#
+#            - name: Install Dependencies
+#              run: npm ci
+#            - name: Create a clean build
+#              run: npm run build
+#
+#            - name: Publish package to npm
+#              run: |
+#                  npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
+#                  npm whoami
+#                  npm publish
+#
+#            - name: Create Github Release
+#              uses: actions/create-release@v1
+#              env:
+#                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#              with:
+#                  tag_name: ${{ github.ref }}
+#                  release_name: Release v${{ steps.extract_release.outputs.VERSION }}
+#                  draft: false
+#                  # Prerelease versions create prereleases on Github
+#                  prerelease: ${{ contains(steps.extract_release.outputs.VERSION, '-') }}
+#                  body: ${{ steps.extract_release.outputs.BODY }}
