--- a/.npmignore
+++ b/.npmignore
@@ -1,35 +1,22 @@
-.git
-.idea
-.github
+.*
 node_modules/
 nbproject/
-.vs*/
-.devcontainer/
 *.code-workspace
 Thumbs.db
-.prettierrc.js
 gulpfile.js
 
 # CI test files
 test/
 travis/
-.travis.yml
-appveyor.yml
-.travis.yaml
 appveyor.yaml
 
 # TypeScript sources and project configuration
 src/
 tsconfig.json
 tsconfig.*.json
-*.d.ts
-
-# ESLint configuration
-.eslintrc.json
-.eslintrc.js
 
 # Sourcemaps
-**/*.js.map
+*.map
 
 # npm package files
 iobroker.*.tgz
