--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -1,4 +1,9 @@
 {
     "extends": "../tsconfig.json",
-    "include": ["./**/*.d.ts", "./**/*.js"]
+    "include": [
+        "./admin.d.ts",
+        "./**/*.js",
+        // include the adapter-config definition if it exists
+        "../src/lib/adapter-config.d.ts"
+    ]
 }
