--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   "homepage": "https://github.com/UncleSamSwiss/ioBroker.loxone",
   "license": "Apache-2.0",
   "keywords": [
-    "ioBroker",
     "loxone",
     "miniserver",
-    "home automation",
     "smarthome"
   ],
   "repository": {
@@ -27,35 +25,35 @@
     "queue-fifo": "*"
   },
   "devDependencies": {
-    "@iobroker/testing": "^2.3.0",
+    "@iobroker/testing": "^2.4.0",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/color-convert": "^1.9.0",
     "@types/gulp": "^4.0.7",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.14.3",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.14",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^9.0.8",
+    "@types/sinon": "^9.0.9",
     "@types/sinon-chai": "^3.2.5",
     "@types/sprintf-js": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "axios": "^0.19.2",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "axios": "^0.21.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.12.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "gulp": "^4.0.2",
-    "mocha": "^8.2.0",
-    "prettier": "^2.1.2",
+    "mocha": "^8.2.1",
+    "prettier": "^2.2.1",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
-    "sinon": "^9.2.0",
+    "sinon": "^9.2.2",
     "sinon-chai": "^3.5.0",
     "source-map-support": "^0.5.19",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "main": "build/main.js",
   "scripts": {
@@ -64,12 +62,13 @@
     "build": "npm run build:ts",
     "watch:ts": "tsc -p tsconfig.build.json --watch",
     "watch": "npm run watch:ts",
-    "test:ts": "mocha --opts test/mocha.custom.opts",
+    "test:ts": "mocha --config test/mocharc.custom.json src/**/*.test.ts",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
-    "lint": "eslint --ext .ts src"
+    "check": "tsc --noEmit",
+    "lint": "eslint --ext .ts src/"
   },
   "bugs": {
     "url": "https://github.com/UncleSamSwiss/ioBroker.loxone/issues"
