--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "queue-fifo": "*"
   },
   "devDependencies": {
+    "@alcalzone/release-script": "^1.10.0",
     "@iobroker/testing": "^2.4.4",
     "@types/chai": "^4.2.17",
     "@types/chai-as-promised": "^7.1.3",
@@ -68,7 +69,8 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
-    "lint": "eslint --ext .ts src/"
+    "lint": "eslint --ext .ts src/",
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/UncleSamSwiss/ioBroker.loxone/issues"
