--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "url": "https://github.com/UncleSamSwiss/ioBroker.loxone"
   },
   "dependencies": {
+    "@iobroker/adapter-core": "^2.4.0",
+    "@sentry/node": "^6.3.6",
     "color-convert": "^2.0.1",
     "node-lox-ws-api": "^0.4.5",
-    "sprintf-js": "^1.1.2",
-    "@iobroker/adapter-core": "^2.4.0",
-    "queue-fifo": "*"
+    "queue-fifo": "*",
+    "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^1.10.0",
