--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@iobroker/adapter-core": "^2.4.0",
     "@sentry/node": "^6.3.6",
     "color-convert": "^2.0.1",
+    "form-data": "^4.0.0",
     "node-lox-ws-api": "^0.4.5",
     "queue-fifo": "*",
     "sprintf-js": "^1.1.2"
