--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@alcalzone/release-script": "^1.10.0",
+    "@iobroker/adapter-dev": "^0.0.4",
     "@iobroker/testing": "^2.4.4",
     "@types/chai": "^4.2.18",
     "@types/chai-as-promised": "^7.1.4",
