--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
   },
   "devDependencies": {
     "@alcalzone/release-script": "^2.2.1",
-    "@iobroker/adapter-dev": "^0.0.4",
+    "@iobroker/adapter-dev": "^0.1.0",
     "@iobroker/testing": "^2.4.4",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
     "@types/color-convert": "^2.0.0",
-    "@types/gulp": "^4.0.9",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.14.1",
     "@types/proxyquire": "^1.3.28",
@@ -48,7 +47,6 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "gulp": "^4.0.2",
     "mocha": "^9.1.1",
     "prettier": "^2.3.2",
     "proxyquire": "^2.1.3",
@@ -73,6 +71,7 @@
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
     "lint": "eslint --ext .ts src/",
+    "translate": "translate-adapter",
     "release": "release-script"
   },
   "bugs": {
