Revert "Use fork of node-lox-ws-api"
This reverts commit e9349719b3d056a0fe4d880ada8ffc0781e79754.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "axios": "^0.24.0",
     "color-convert": "^2.0.1",
     "form-data": "^4.0.0",
-    "node-lox-ws-api": "github:arsiesis/node-lox-ws-api",
+    "node-lox-ws-api": "^0.4.5",
     "queue-fifo": "*",
     "sprintf-js": "^1.1.2"
   },
