--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "axios": "^0.24.0",
     "color-convert": "^2.0.1",
     "form-data": "^4.0.0",
-    "node-lox-ws-api": "^0.4.5",
+    "lxcommunicator": "^1.1.1",
     "queue-fifo": "*",
-    "sprintf-js": "^1.1.2"
+    "sprintf-js": "^1.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^2.2.1",
@@ -40,6 +41,7 @@
     "@types/sinon": "^10.0.6",
     "@types/sinon-chai": "^3.2.6",
     "@types/sprintf-js": "^1.1.2",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.3.4",
