--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "form-data": "^4.0.0",
     "node-lox-ws-api": "^0.4.5",
     "queue-fifo": "*",
-    "sprintf-js": "^1.1.2"
+    "sprintf-js": "^1.1.2",
+    "tsc": "^2.0.3"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^2.2.1",
@@ -55,7 +56,7 @@
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   },
   "main": "build/main.js",
   "scripts": {
