--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.loxone",
-  "version": "2.2.4",
+  "version": "3.0.0",
   "description": "Communicates with a Loxone Miniserver.",
   "author": {
     "name": "UncleSamSwiss",
@@ -19,44 +19,45 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.5.1",
-    "@sentry/node": "^6.13.3",
+    "@sentry/node": "^6.16.1",
     "axios": "^0.24.0",
     "color-convert": "^2.0.1",
     "form-data": "^4.0.0",
-    "node-lox-ws-api": "^0.4.5",
+    "lxcommunicator": "^1.1.1",
     "queue-fifo": "*",
     "sprintf-js": "^1.1.2",
-    "tsc": "^2.0.3"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^2.2.1",
     "@iobroker/adapter-dev": "^0.1.0",
-    "@iobroker/testing": "^2.5.2",
+    "@iobroker/testing": "^2.5.6",
     "@types/chai": "^4.2.22",
-    "@types/chai-as-promised": "^7.1.4",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/color-convert": "^2.0.0",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.11",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^16.11.17",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^10.0.6",
-    "@types/sinon-chai": "^3.2.6",
+    "@types/sinon": "^10.0.11",
+    "@types/sinon-chai": "^3.2.8",
     "@types/sprintf-js": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "chai": "^4.3.4",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "mocha": "^9.1.3",
-    "prettier": "^2.5.0",
+    "mocha": "^9.2.2",
+    "prettier": "^2.6.1",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
-    "sinon": "^11.1.2",
+    "sinon": "^12.0.1",
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "main": "build/main.js",
   "scripts": {
