Fix prettier errors UncleSamSwiss/ioBroker.loxone#525

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -35,12 +35,14 @@ jobs:
 
             - name: Install Dependencies
               run: npm ci
+            - name: Lint source code
+              run: npm run lint
+            - name: Check formatting
+              run: npx prettier --check .
             - name: Perform a type check
               run: npm run build:ts -- --noEmit
               env:
                   CI: true
-            - name: Lint source code
-              run: npm run lint
             - name: Test package files
               run: npm run test:package
 
