--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/UncleSamSwiss/ioBroker.loxone",
   "license": "Apache-2.0",
   "keywords": [
+    "ioBroker",
     "loxone",
     "miniserver",
     "smarthome"
@@ -32,7 +33,7 @@
     "color-convert": "^3.1.3",
     "form-data": "^4.0.4",
     "lxcommunicator": "^1.1.1",
-    "queue-fifo": "*",
+    "queue-fifo": "^0.2.6",
     "sprintf-js": "^1.1.2",
     "uuid": "^13.0.0"
   },
